Preparing empty examples to start with.